<resources>
    <string name="app_name">andFHEM</string>
    <string name="unsortedRoomName">unsorted</string>
    <string name="deviceName">Name</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="windChill">Windchill</string>
    <string name="rain">Rain</string>
    <string name="humidity">Humidity</string>
    <string name="actuator">Actuator</string>
    <string name="state">State</string>
    <string name="battery">Battery</string>
    <string name="batteryVoltage">Battery voltage</string>
    <string name="measured">Measured</string>
    <string name="warnings">Warnings</string>
    <string name="time">Time</string>
    <string name="avgHour">Average Hour</string>
    <string name="avgDay">Average Day</string>
    <string name="avgYear">Average Year</string>
    <string name="avgMonth">Average Month</string>
    <string name="minDay">Minimum Day</string>
    <string name="minMonth">Minimum Month</string>
    <string name="maxDay">Maximum Day</string>
    <string name="maxMonth">Maximum Month</string>
    <string name="isRaining">Is Raining?</string>
    <string name="sunshine">Sonneneinstrahlung</string>
    <string name="desiredTemperature">Desired Temperature</string>
    <string name="comfortTemperature">Comfort-Temperature</string>
    <string name="ecoTemperature">Eco-Temperature</string>
    <string name="maximumTemperature">Maximum Temperature</string>
    <string name="minimumTemperature">Minimum Tempeature</string>
    <string name="forecast">Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="pressureNN">Pressure NN</string>
    <string name="dewpoint">Dewpoint</string>
    <string name="rainRate">Rain Rate</string>
    <string name="rainTotal">Rain Total</string>
    <string name="windAvgSpeed">Wind Avg. Speed</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
    <string name="uvValue">UV Value</string>
    <string name="uvRisk">UV Risk</string>
    <string name="rooms">Room</string>
    <string name="counterA">Counter A</string>
    <string name="counterB">Counter B</string>
    <string name="inputA">Input A</string>
    <string name="inputB">Input B</string>
    <string name="inputC">Input C</string>
    <string name="inputD">Input D</string>
    <string name="counterReadingTariff1">Counter reading tariff 1</string>
    <string name="counterReading">Counter reading</string>
    <string name="present">Present</string>
    <string name="currentUsage">Current Usage</string>
    <string name="currentVoltage">Current Voltage</string>
    <string name="hourUsage">Hour usage</string>
    <string name="dayUsage">Day Usage</string>
    <string name="dayLastUsage">Last day Usage</string>
    <string name="monthUsage">Month Usage</string>
    <string name="yearUsage">Year Usage</string>
    <string name="lastStateChange">Last State Change</string>
    <string name="lastState">Last State</string>
    <string name="power">Power</string>
    <string name="audio">Audio</string>
    <string name="audioMode">Audio mode</string>
    <string name="input">Input</string>
    <string name="mode">Mode</string>
    <string name="definition">Definition</string>
    <string name="regression">regression</string>
    <string name="sum">Sum</string>
    <string name="mac">MAC address</string>
    <string name="ip">IP address</string>
    <string name="wake">Wake</string>
    <string name="isRunning">Is Running?</string>
    <string name="shutdown">Shutdown</string>
    <string name="stateAppendix">Set %1$s to</string>
    <string name="requestRefresh">Request refresh</string>
    <string name="delta">Delta</string>
    <string name="weather">Weather</string>
    <string name="visibilityCondition">Visibility condition</string>
    <string name="currentWeather">Current Weather</string>
    <string name="dimUp">Dim +</string>
    <string name="dimDown">Dim -</string>
    <string name="actions">Actions</string>
    <string name="model">Model</string>
    <string name="send">Send</string>
    <string name="error">Error!</string>
    <string name="error_send">Send last error</string>
    <string name="error_send_content">AndFHEM can send the last error as mail to the developer. Continue?</string>
    <string name="error_send_no_error">Cannot send an error, as none is registered!</string>
    <string name="errorDeviceListLoad">Could not load %1$s device(s) (types: %2$s)!</string>
    <string name="errorOutdatedData">Sensor data seems to be outdated. Make sure the device sends data.</string>
    <string name="errorDuplicateInstall">The application was installed twice. Have you installed the Premium version and the normal version in parallel? Please make sure you have only one AndFHEM version installed.</string>
    <string name="application_log_send">Send application log</string>
    <string name="errorExternalStorageNotPresent">File system not accessible.</string>
    <string name="hex2quat">Hex -> Quat</string>
    <string name="quat2hex">Quat -> Hex</string>
    <string name="result">Result</string>
    <string name="set_value">Set value</string>
    <string name="set">Set</string>
    <string name="android_version">Android Version</string>
    <string name="feature_requires_android_version">This feature requires a minimum Android version of %1$s.</string>
    <string name="unknown">unknown</string>
    <string name="type">Type</string>
    <string name="about">About</string>
    <string name="commandAccepted">Command accepted?</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="stop">stop</string>
    <string name="visibility">visibility</string>
    <string name="rawValue">Raw value</string>
    <string name="content">Content</string>
    <string name="fillPercentage">Fill percentage</string>
    <string name="maximumContent">Maximum content</string>
    <string name="currentSwitchTime">Current Switch Time</string>
    <string name="currentSwitchDevice">Current Device</string>
    <string name="lastSwitchTime">Last Trigger</string>
    <string name="nextSwitchTime">Next Trigger</string>
    <string name="windchill">Windchill</string>
    <string name="deleteConfirmation">Are you sure you want to delete the device from FHEM?</string>
    <string name="isActive">Active?</string>
    <string name="deactivated">deactivated</string>
    <string name="brightness">Brightness</string>
    <string name="motion">Motion</string>
    <string name="thermostatThresholdOn">Thermostat On-Threshold</string>
    <string name="thermostatThresholdOff">Thermostat Off-Threshold</string>
    <string name="valveThresholdOff">Valve Off-Threshold</string>
    <string name="valveThresholdOn">Valve On-Threshold</string>
    <string name="ecoThresholdOn">Eco Off-Threshold</string>
    <string name="ecoThresholdOff">Eco On-Threshold</string>
    <string name="excludedDevices">Excluded devices</string>
    <string name="idleDevices">Idle devices</string>
    <string name="demandDevices">Demand devices</string>
    <string name="target">Target</string>
    <string name="context_addtofavorites">Add to favorites</string>
    <string name="context_removefavorite">Remove favorite</string>
    <string name="context_rename">Rename</string>
    <string name="context_alias">Set alias</string>
    <string name="context_delete">Delete</string>
    <string name="context_move">Move</string>
    <string name="context_notification">Notifications</string>
    <string name="prefOtherPreferencesCategory">Other Preferences</string>
    <string name="prefAppearancePreferencesCategory">Appearance</string>
    <string name="prefErrorsPreferencesCategory">Error-Handling</string>
    <string name="prefWidgetCategory">Widgets</string>
    <string name="prefShowHiddenDevices">Show hidden devices</string>
    <string name="prefDefaultTimespan">Graph Timespan</string>
    <string name="prefAutoUpdate">Auto Update</string>
    <string name="prefAutoUpdateSummary">When the application is running: Refresh the device list %1$s automatically</string>
    <string name="prefWidgetRemoteUpdate">Remote Update</string>
    <string name="prefWidgetRemoteUpdateSummaryOn">Widgets may request new data from the server</string>
    <string name="prefWidgetRemoteUpdateSummaryOff">Widgets may not request new data from the server</string>
    <string name="prefDeviceColumnWidth">Device column width</string>
    <string name="prefDeviceColumnWidthSummary">Device columns have a minimum width of %1$s dp</string>
    <string name="prefDeviceListPaddingRight">Device lists right padding</string>
    <string name="prefDeviceListPaddingRightSummary">Device lists will keep a right padding of %1$s dp</string>
    <string name="prefWidgetUpdateTimeWLAN">WLAN update interval</string>
    <string name="prefWidgetUpdateTimeMobile">Mobile update interval</string>
    <string name="prefDeviceFunctionalityOrder">Device functionality order</string>
    <string name="prefDeviceFunctionalityOrderSummary">Order of device functionalities as well as hide and view</string>
    <string name="prefUpdateOnApplicationStart">Refresh on application start</string>
    <string name="prefUpdateOnApplicationStartSummaryOn">Update device list upon application start</string>
    <string name="prefUpdateOnApplicationStartSummaryOff">Don\'t update device list upon application start</string>
    <string name="prefShowSetValueButtons">\'Set\' button for sliders</string>
    <string name="prefGCMProjectId">GCM Project Number</string>
    <string name="prefGcmWidgetUpdate">Update widget upon GCM notification</string>
    <string name="prefGcmWidgetUpdateSummaryOn">When receiving a GCM message containing new state information for a device widgets are updated</string>
    <string name="prefGcmWidgetUpdateSummaryOff">When receiving a GCM message containing new state information for a device widgets are not updated</string>
    <string name="prefStartupView">Startup view</string>
    <string name="prefStartupViewSummary">On application start \'%1$s\' will be shown</string>
    <string name="prefConnectionTimeout">Connection timeout</string>
    <string name="prefCommandExecutionRetries">Command execution retries</string>
    <string name="prefCommandExecutionRetriesSummary">Try to send a command %1$s times if the command execution fails</string>
    <string name="prefFHEMWEBDeviceName">FHEMWEB Device Name</string>
    <string name="prefApplicationPassword">Password</string>
    <string name="prefApplicationPasswordSummary">Password which will be asked upon application start.</string>
    <string name="prefClearTrustedCertificates">Clear trusted certificates</string>
    <string name="prefClearTrustedCertificatesSummary">Remove all manually trusted certificates from the application trust store</string>
    <string name="prefVoiceCommand">Voice commands</string>
    <string name="prefVoiceCommandSummary">Enable andFHEM as accessibility service to enable voice recognition. This is a Premium only feature.</string>
    <string name="okButton">OK</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="change">change</string>
    <string name="dummy_date" translatable="false">01.01.2012</string>
    <string name="dummy_time" translatable="false">11:11</string>
    <string name="s_suffix" translatable="false">s</string>
    <string name="importPreferences">Import</string>
    <string name="importPreferencesSummary">Imports an existing backup of application preferences.</string>
    <string name="exportPreferences">Export</string>
    <string name="exportPreferencesSummary">Creates a new backup of all application preferences (including FHEM connections, favorites and so on)</string>
</resources>