<?xml version="1.0" encoding="utf-8"?><!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory android:title="@string/prefOthersCategory">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UPDATE_ON_APPLICATION_START"
            android:title="@string/prefUpdateOnApplicationStart"
            android:summaryOn="@string/prefUpdateOnApplicationStartSummaryOn"
            android:summaryOff="@string/prefUpdateOnApplicationStartSummaryOff" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UPDATE_ON_ROOM_OPEN"
            android:title="@string/prefUpdateRoomOnOpen"
            android:summaryOn="@string/prefUpdateRoomOnOpenSummaryOn"
            android:summaryOff="@string/prefUpdateRoomOnOpenSummaryOff" />

        <ListPreference
            android:id="@+id/autoUpdateTime"
            android:defaultValue="-1"
            android:entries="@array/updateRoomListTimeEntries"
            android:entryValues="@array/updateRoomListTimeValues"
            android:key="AUTO_UPDATE_TIME"
            android:title="@string/prefAutoUpdate" />

        <EditTextPreference
            android:inputType="number"
            android:key="FCM_SENDER_ID"
            android:title="@string/prefFCMSenderId" />

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/fcm_keep_messages_days"
            android:entryValues="@array/fcm_keep_messages_days_values"
            android:key="FCM_KEEP_MESSAGES_DAYS"
            android:title="@string/prefKeepMessagesDays"
            android:summary="@string/prefKeepMessagesDaysSummary" />

        <li.klass.fhem.widget.preference.SeekBarPreference
            min="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dialogMessage=""
            android:key="CONNECTION_TIMEOUT"
            android:defaultValue="4"
            android:max="20"
            android:text="@string/s_suffix"
            android:title="@string/prefConnectionTimeout" />

        <li.klass.fhem.widget.preference.NumberOfRetriesSeekBarPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dialogMessage=""
            android:key="COMMAND_EXECUTION_RETRIES"
            android:defaultValue="3"
            android:max="20"
            android:text=""
            android:title="@string/prefCommandExecutionRetries" />

        <EditTextPreference
            android:inputType="text"
            android:key="DEVICE_NAME"
            android:title="@string/prefFHEMWEBDeviceName" />

        <EditTextPreference
            android:key="PASSWORD"
            android:password="true"
            android:summary="@string/prefApplicationPasswordSummary"
            android:title="@string/prefApplicationPassword"
            tools:ignore="Deprecated" />

        <Preference
            android:key="CLEAR_TRUSTED_CERTIFICATES"
            android:title="@string/prefClearTrustedCertificates"
            android:summary="@string/prefClearTrustedCertificatesSummary" />

        <Preference
            android:title="@string/prefVoiceCommand"
            android:key="VOICE_COMMANDS"
            android:summary="@string/prefVoiceCommandSummary" />

        <Preference
            android:title="@string/exportPreferences"
            android:key="EXPORT_SETTINGS"
            android:summary="@string/exportPreferencesSummary" />

        <Preference
            android:title="@string/importPreferences"
            android:key="IMPORT_SETTINGS"
            android:summary="@string/importPreferencesSummary" />
    </PreferenceCategory>
</PreferenceScreen>
