<?xml version="1.0" encoding="utf-8"?><!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory android:title="@string/prefWidgetCategory">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefWidgetRemoteUpdate"
            android:title="@string/prefWidgetRemoteUpdate"
            android:summaryOn="@string/prefWidgetRemoteUpdateSummaryOn"
            android:summaryOff="@string/prefWidgetRemoteUpdateSummaryOff" />

        <ListPreference
            android:defaultValue="3600"
            android:entries="@array/widgetUpdateTimeEntries"
            android:entryValues="@array/widgetUpdateTimeValues"
            android:key="WIDGET_UPDATE_INTERVAL_WLAN"
            android:title="@string/prefWidgetUpdateTimeWLAN" />

        <ListPreference
            android:defaultValue="3600"
            android:entries="@array/widgetUpdateTimeEntries"
            android:entryValues="@array/widgetUpdateTimeValues"
            android:key="WIDGET_UPDATE_INTERVAL_MOBILE"
            android:title="@string/prefWidgetUpdateTimeMobile" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="GCM_WIDGET_UPDATE"
            android:title="@string/prefGcmWidgetUpdate"
            android:summaryOn="@string/prefGcmWidgetUpdateSummaryOn"
            android:summaryOff="@string/prefGcmWidgetUpdateSummaryOff" />

    </PreferenceCategory>

</PreferenceScreen>
